fix overflow

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -918,7 +918,7 @@ input[type=password] {
 
 .hero {
   position: relative;
-  overflow: hidden;
+  overflow-x: clip;
 }
 @media screen and (min-width: 1024px) {
   .hero::before {
