--- a/app/scss/layout/_hero.scss
+++ b/app/scss/layout/_hero.scss
@@ -1,7 +1,7 @@
 // =========================== HERO SECTION CONTAINER =============================================//
 .hero {
     position: relative;
-    overflow: hidden;
+    overflow-x: clip;
     &::before {
         @media screen and (min-width: 1024px) {
             content: '';
